# SimpleMatchmaking

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: main.py
src/core/: config.py
src/core/types/: matchmaking.py
src/game/: main.py  matchmaking.py
src/schemas/: matchmaking.py
tests/: __init__.py  matchmaking.py
